fix: address code review feedback (#7)
* fix: address code review feedback

* format

---------

Co-authored-by: yoandiny <63061998+yoandiny@users.noreply.github.com>
Co-authored-by: Yoan <yoandiny14@gmail.com>